# Codebase-QA

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  main.py
app/clients/: llm.py  vectordb.py
app/models/: schemas.py
app/parsers/: pdf_parser.py  text_parser.py
app/routers/: documents.py  health.py  ingest.py  query.py
app/services/: embedding.py  ingestion.py  rag.py
app/utils/: chunker.py  hashing.py
data/: metadata.db
data/chroma_db/: chroma.sqlite3  metadata.db
frontend/: .env.development  .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: AnswerPanel.jsx  CodeBlock.jsx  ConfidenceMeter.jsx  HealthBadge.jsx  LibraryPanel.jsx  Markdown.jsx  QueryConsole.jsx  SourceCard.jsx  ThemeToggle.jsx  TopBar.jsx  UploadDropzone.jsx
frontend/src/context/: ThemeContext.jsx  ToastContext.jsx
frontend/src/lib/: format.js
frontend/src/pages/: AskPage.jsx  UploadPage.jsx
specs/: AGENT_RULES.md  API_SPEC.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  PRD.md  TASKS.md  TEST_PLAN.md
tests/: conftest.py
tests/integration/: test_documents.py  test_health.py  test_ingest.py  test_query.py
tests/unit/: test_chunker.py  test_hashing.py  test_pdf_parser.py  test_text_parser.py
