[project]
name = "rag-api"
version = "0.1.0"
description = "RAG API — document ingestion, vector embeddings, and LLM question answering."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.4.0",
    "pymupdf>=1.24.0",
    "openai>=1.40.0",
    "chromadb>=0.5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
